Recodes block 3 using equalizer to better format the boxes and auto generate the height. This will prevent text from spilling over like it does on the current theme. (Because the heigh is hardcoded.)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3875,6 +3875,15 @@ GENERAL STYLES
   .slider-container p {
     color: #fafafa; }
 
+.b3-wrapper {
+  background-color: #fafafa;
+  padding: 10px 15px; }
+  .b3-wrapper ul {
+    text-align: left; }
+
+.homeinnercontent ul {
+  text-align: left; }
+
 .pf-tk-button {
   display: inline-block;
   text-align: center;
